@@ -98,6 +98,18 @@
 			<option
 				value="1">JSHOW</option>
 		</field>
+		
+		<field
+			name="count_clicks"
+			type="radio"
+			default="1"
+			label="COM_WEBLINKS_FIELD_CONFIG_COUNTCLICKS_LABEL"
+			description="COM_WEBLINKS_FIELD_CONFIG_COUNTCLICKS_DESC">
+			<option
+				value="0">JNO</option>
+			<option
+				value="1">JYES</option>
+		</field>
 
 		<field
 			name="spacer2"
