@@ -31,7 +31,8 @@ $ -> Language fix or change
 $ Small corrections for mod_article_news
 
 23-Feb-2010 Hannes Papenberg
-# refactored mod_newsflash to mod_articles_news - Thanks Rob Clayburn!
+^ refactored mod_newsflash to mod_articles_news - Thanks Rob Clayburn!
++ Added option to enable/disable the weblink click-tracking - Thanks Rob Clayburn!
 
 23-Feb-2010 Christophe Demko
 ^ Changing call JHtmlSelect::* to self::* in JHtmlSelect class
